--- a/index.html
+++ b/index.html
@@ -15,29 +15,11 @@ html, body {
 <script>
 const FILENAME = 'me2.jpg';
 
-const width = window.innerWidth;
-const height = window.innerHeight;
+let width = 1;
+let height = 1;
 
-// Three
-// const projection = {
-//   angle: 45,
-//   aspect: W / H,
-//   near: 0.1,
-//   far: 10000
-// };
-// 
-// const camera = new THREE.PerspectiveCamera(
-//   projection.angle,
-//   projection.aspect,
-//   projection.near,
-//   projection.far
-// );
-// camera.position.set( 20, 40, 400 );
-
-
+let camera;
 const scene = new THREE.Scene();
-const camera = new THREE.OrthographicCamera(0 , width, height, 0, 1, 1000);
-camera.position.z = 100;
 const renderer = new THREE.WebGLRenderer({antialias: true});
 const texture = new THREE.TextureLoader().load( FILENAME, run );
 
@@ -48,33 +30,17 @@ function run(texture) {
   console.log(`\twidth ${texture.image.width}`);
   console.log(`\theight ${texture.image.height}`);
 
-  renderer.setSize(width, height);
+  width = texture.image.width;
+  height = texture.image.height;
+
+  camera = new THREE.OrthographicCamera(0 , width, height, 0, 1, 1000);
+  camera.position.z = 100;
+
+
+  renderer.setSize(texture.image.width, texture.image.height);
   const body = document.body;
   body.appendChild(renderer.domElement);
   scene.add(camera);
-
-  // Test
-  // const pointLight = new THREE.PointLight(0xFFFFFF);
-  // pointLight.position.x = 10;
-  // pointLight.position.y = 50;
-  // pointLight.position.z = 400;
-  // scene.add(pointLight);
-
-  // const xaxis = new THREE.Geometry();
-  // xaxis.vertices.push(new THREE.Vector3(-9999, 0, 0));
-  // xaxis.vertices.push(new THREE.Vector3(9999, 0, 0));
-  // scene.add(new THREE.Line( xaxis, new THREE.MeshBasicMaterial({ color: '#F88' })));
-  // 
-  // const yaxis = new THREE.Geometry();
-  // yaxis.vertices.push(new THREE.Vector3(0, -9999, 0));
-  // yaxis.vertices.push(new THREE.Vector3(0, 9999, 0));
-  // scene.add(new THREE.Line( yaxis, new THREE.MeshBasicMaterial({ color: '#8F8' })));
-  // 
-  // const zaxis = new THREE.Geometry();
-  // zaxis.vertices.push(new THREE.Vector3(0, 0, -9999));
-  // zaxis.vertices.push(new THREE.Vector3(0, 0, 9999));
-  // scene.add(new THREE.Line( zaxis, new THREE.MeshBasicMaterial({ color: '#88F' })));
-
 
   const buffer = renderMaskingBuffer();
   processBuffer(buffer, texture); 
@@ -137,7 +103,7 @@ function dist(x1, y1, x2, y2) {
 }
 function seed(scene) {
   const spread = [];
-  for (let i=0; i < 15; i++) {
+  for (let i=0; i < 25; i++) {
     let px, py, rz, len;
 
     //rz = Math.random() * (2 * Math.PI) - Math.PI;
