--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@ html, body {
   margin: 0;
 }
 </style>
-<script src="thre.min.js.110"></script>
+<!--<script src="thre.min.js.110"></script>-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js" integrity="sha256-gSh8eotzb/CVvCREGPUNgIWuDnTYnZvVOQnRrP1eDjI=" crossorigin="anonymous"></script>
 <script src="shaders.js"></script>
 </head>
 <body>
