--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@ html, body {
   margin: 0;
 }
 </style>
-<!--<script src="thre.min.js.110"></script>-->
+<script src="thre.min.js.110"></script>
+<!--
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js" integrity="sha256-gSh8eotzb/CVvCREGPUNgIWuDnTYnZvVOQnRrP1eDjI=" crossorigin="anonymous"></script>
+-->
 <script src="shaders.js"></script>
 </head>
 <body>
@@ -18,12 +20,11 @@ const FILENAME = 'me2.jpg';
 
 let width = 1;
 let height = 1;
-
 let camera;
-const scene = new THREE.Scene();
+
 const renderer = new THREE.WebGLRenderer({antialias: true});
 const texture = new THREE.TextureLoader().load( FILENAME, run );
-
+const scene = new THREE.Scene();
 
 
 function run(texture) {
@@ -37,20 +38,18 @@ function run(texture) {
   camera = new THREE.OrthographicCamera(0 , width, height, 0, 1, 1000);
   camera.position.z = 100;
 
-
   renderer.setSize(texture.image.width, texture.image.height);
   const body = document.body;
   body.appendChild(renderer.domElement);
-  scene.add(camera);
 
-  const buffer = renderMaskingBuffer();
-  processBuffer(buffer, texture); 
+  const maskBuffer = renderMaskingBuffer();
+  combineBuffers(maskBuffer, texture); 
 
   // animate();
 }
 
 
-function createSQ(px, py, rz, len, isFrame) {
+function createPolaroid(px, py, rz, len, isFrame) {
   let mesh, geometry, material;
   let x1 = 0; 
   let y1 = 0;
@@ -86,11 +85,10 @@ function createSQ(px, py, rz, len, isFrame) {
 
   material = new THREE.ShaderMaterial( {
     uniforms: uniforms,
-    // vertexShader: document.getElementById( 'vertexShader' ).textContent,
+    vertexShader: vertexShader,
     fragmentShader: maskFragShader,
     depthTest: false
   });
-  
 
   mesh = new THREE.Mesh( geometry, material);
   mesh.position.x = cx + px;
@@ -136,11 +134,11 @@ function seed(scene) {
     
   
     // FIXME: render order problem
-    scene.add(createSQ(px, py, rz, len, 1.0));
+    scene.add(createPolaroid(px, py, rz, len, 1.0));
     if (Math.random() > 0.5) {
-      scene.add(createSQ(px, py, rz, len, 0.9));
+      scene.add(createPolaroid(px, py, rz, len, 0.9));
     } else {
-      scene.add(createSQ(px, py, rz, len, 0.8));
+      scene.add(createPolaroid(px, py, rz, len, 0.8));
     }
   }
 }
@@ -163,17 +161,17 @@ function renderMaskingBuffer() {
 }
 
 
-function processBuffer(buffer, texture) {
+function combineBuffers(maskBuffer, texture) {
   const materialT = new THREE.ShaderMaterial( {
     uniforms: { 
-      tImage: { type: 't',  value: texture},
-      tDiffuse: { type: 't', value: buffer},
-      width: { type: 'f', value: width},
-      height: { type: 'f', value: height},
-      blurSize: { type: 'i', value: 4}
+      tImage: { type: 't',  value: texture },
+      tMask: { type: 't', value: maskBuffer },
+      width: { type: 'f', value: width },
+      height: { type: 'f', value: height },
+      blurSize: { type: 'i', value: 4 }
     },
     vertexShader: vertexShader,
-    fragmentShader: screenFragShader,
+    fragmentShader: polaroidFragShader,
     depthWrite: false
   });
 
@@ -182,14 +180,10 @@ function processBuffer(buffer, texture) {
   quad.position.x = width / 2;
   quad.position.y = height / 2;
 
-
-  scene2 = new THREE.Scene();
-  scene2.add(camera)
-  scene2.add( quad );
-  renderer.render(scene2, camera);
+  scene.add(camera)
+  scene.add( quad );
+  renderer.render(scene, camera);
 }
-
-
 
 function render() {
   renderer.render(scene, camera);
@@ -201,8 +195,5 @@ function animate() {
   render();
 }
 
-
-
 </script>
 </html>
-
